LATEST VERSION
-----------------------------

ilivalidator 1.11.4 (2020-03-02)
-----------------------------
- Command line: use options without a data-file (#223)
- java.lang.NullPointerException when starting filelist (#224)
- Unique constraints violation throws NPE (ili1) (#225)
- iox-ili-1.20.17
- ili2c-5.0.6

ilivalidator 1.11.3 (2019-12-23)
-----------------------------
- Unable to detect out model name for ili22 (#214)
- NPE when reference to main table is missing in surface table (ili1) (#213)
- Error: polygons overlay (#202)
- iox-ili-1.20.15

ilivalidator 1.11.2 (2019-11-08)
-----------------------------
- fix objectCount(UNDEFINED) (#203)
- add User+start date/time to log
- iox-ili-1.20.14

ilivalidator 1.11.1 (2019-09-20)
-----------------------------
- fails to report superfluous TIDs (#201)
- ili2c-5.0.2
- iox-ili-1.20.13

ilivalidator 1.11.0 (2019-04-03)
-----------------------------
- incomplete attribute path in error message
- new config parameter to report inconsistent model version
- new function --check-repo-data
- new function --updateIliData
- new function --createIliData
- GUI: create menu items for cmdline options
- localize validation messages
- fixed: Xtflog contains not all messages
- fixed: invalid ring lines Error - failed to build polygons
- fixed: Constraints in association: compare objects not possible
- iox-ili-1.20.11
- ili2c-5.0.0

ilivalidator 1.10.0 (2018-12-09)
-----------------------------
- GUI: use model names as additionalModels
- GUI: add "new..." config file button
- Error message addressed wrong basket
- implement Math funcitons
- fixed msg_(language) support
- use keymsg in UNIQUE constraint
- implement INTERLIS_ext functions
- fixed CCW calculation if two half circles with horizontal straights
- use attrPath in all validateAttribute messages
- validate ALL OF enumerations
- validate formatted type
- validate UUID if used as BID
- validate STANDRADOID
- validate TEXT OID
- validate basket element name