@@ -20,6 +20,7 @@ configurations {
 //}
 
 dependencies {
+    compile group: 'ch.ehi', name: 'ehibasics', version: '1.3.0+'
     compile group: 'ch.interlis', name: 'iox-ili', version: '1.20.17'
     compile group: 'ch.interlis', name: 'ili2c-tool', version: "5.0.6"
     compile group: 'ch.interlis', name: 'ili2c-core', version: "5.0.6"
