@@ -1,5 +1,7 @@
 LATEST VERSION
 -----------------------------
+- Missing check when write to "unwriteable" log-file (#228)
+- ehibasics-1.3.0-SNAPSHOT
 
 ilivalidator 1.11.4 (2020-03-02)
 -----------------------------
